<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bank_account_info_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context="net.iantech.android.remitee.SendActivity">

    <TextView
        android:id="@+id/bank_account_dialog_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/collect_bank_message" />

    <LinearLayout
        android:id="@+id/collect_bank_select_bank_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_account_dialog_title_textview"
        android:orientation="horizontal">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:gravity="start|center"
            android:background="@drawable/card_lightgray_background"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/collect_bank_label_bank" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/collect_bank_select_bank_spinner"
            android:layout_width="0dip"
            android:layout_weight=".7"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:background="@drawable/card_lightgray_background"
            android:padding="@dimen/activity_vertical_margin"
            android:prompt="@string/collect_bank_select_bank" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collect_bank_account_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collect_bank_select_bank_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/collect_bank_account_number_label"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:gravity="start|center"
            android:layout_height="match_parent"
            android:background="@drawable/card_lightgray_background"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/collect_bank_label_account" />

        <EditText
            android:id="@+id/collect_bank_account_number_edittext"
            android:layout_width="0dip"
            android:layout_weight=".55"
            android:layout_height="wrap_content"
            android:background="@drawable/card_lightgray_background"
            android:inputType="numberPassword|number"
            android:maxLines="1"
            android:gravity="end"
            android:nextFocusForward="@+id/contact_lastName_edittext"
            android:padding="@dimen/activity_vertical_margin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collect_bank_account_tin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collect_bank_account_number_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/collect_bank_document_label"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:gravity="start|center"
            android:layout_height="match_parent"
            android:background="@drawable/card_lightgray_background"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/collect_bank_label_document" />
        <EditText
            android:id="@+id/collect_bank_account_tin_edittext"
            android:layout_width="0dip"
            android:layout_weight=".55"
            android:layout_height="wrap_content"
            android:background="@drawable/card_lightgray_background"
            android:inputType="number"
            android:gravity="end"
            android:maxLines="1"
            android:padding="@dimen/activity_vertical_margin" />
    </LinearLayout>

    <Switch
        android:id="@+id/collect_bank_account_type_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collect_bank_account_tin_layout"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:switchPadding="@dimen/activity_vertical_margin"
        android:text="@string/collect_bank_account_type" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBankAccountButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingBottom="@dimen/main_button_vertical_padding"
            android:paddingTop="@dimen/main_button_vertical_padding"
            android:text="@string/action_cancel"
            android:textSize="@dimen/button_textsize"
            android:theme="@style/AppTheme.RaisedButton.Red" />

        <Button
            android:id="@+id/saveBankAccountButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingBottom="@dimen/main_button_vertical_padding"
            android:paddingTop="@dimen/main_button_vertical_padding"
            android:text="@string/action_save"
            android:textSize="@dimen/button_textsize"
            android:theme="@style/AppTheme.RaisedButton.Accent" />
    </LinearLayout>

</RelativeLayout>
