<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context="net.iantech.android.remitee.SendActivity">

    <EditText
        android:id="@+id/contact_firstName_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/card_lightgray_background"
        android:hint="@string/firstName"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1"
        android:nextFocusForward="@+id/contact_lastName_edittext"/>

    <EditText
        android:id="@+id/contact_lastName_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_firstName_edittext"
        android:layout_centerHorizontal="true"
        android:background="@drawable/card_lightgray_background"
        android:hint="@string/lastName"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1"
        android:nextFocusForward="@+id/contact_phone_areacode_edittext"
        android:padding="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:id="@+id/contact_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_lastName_edittext"
        android:orientation="horizontal">


        <com.hbb20.CountryCodePicker
            android:id="@+id/contact_countryCodePicker"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".35"
            android:background="@drawable/card_lightgray_background_left"
            android:padding="@dimen/nav_header_vertical_smallspacing"
            app:ccpLanguage="SPANISH"
            app:countryPreference="AR,BO,CO,PE,PY,DO"
            app:defaultCode="54" />

        <EditText
            android:id="@+id/contact_phone_areacode_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".23"
            android:background="@drawable/card_lightgray_background_left"
            android:hint="@string/area"
            android:inputType="phone"
            android:maxLength="4"
            android:nextFocusForward="@+id/contact_phone_edittext"
            android:maxLines="1"
            android:padding="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/contact_phone_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".42"
            android:background="@drawable/card_lightgray_background"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="8"
            android:maxLines="1"
            android:nextFocusForward="@+id/contact_documentNumber_edittext"
            android:padding="@dimen/activity_horizontal_margin" />
    </LinearLayout>


    <EditText
        android:id="@+id/contact_documentNumber_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_phoneNumber"
        android:background="@drawable/card_lightgray_background"
        android:hint="@string/document_number"
        android:inputType="number"
        android:maxLines="1"
        android:nextFocusForward="@+id/sender_phone_edittext"
        android:padding="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveContactButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingBottom="@dimen/main_button_vertical_padding"
            android:paddingTop="@dimen/main_button_vertical_padding"
            android:text="@string/action_save"
            android:textSize="@dimen/button_textsize"
            android:theme="@style/AppTheme.RaisedButton.Accent" />

        <Button
            android:id="@+id/senderSelectFromContactsButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:drawablePadding="@dimen/main_button_margin"
            android:drawableStart="@drawable/ic_perm_contact_calendar_white_24dp"
            android:drawableLeft="@drawable/ic_perm_contact_calendar_white_24dp"
            android:text="@string/select_contact"
            android:textSize="@dimen/button_textsize"
            android:paddingTop="@dimen/main_button_vertical_padding"
            android:paddingBottom="@dimen/main_button_vertical_padding"
            android:theme="@style/AppTheme.RaisedButton.Accent" />

    </LinearLayout>

</RelativeLayout>
