<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

    <RelativeLayout
        android:id="@+id/activity_main_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/welcome_logo_margin"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/activity_main_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/welcome_text_margin"
            android:padding="@dimen/activity_horizontal_margin"

            android:text="@string/welcome_message"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_bodytext_textsize" />

        <LinearLayout
            android:id="@+id/activity_main_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quoteButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="@dimen/main_button_vertical_padding"
                android:text="@string/action_quote"
                android:textSize="@dimen/button_textsize"
                android:theme="@style/AppTheme.RaisedButton.Accent" />

            <Button
                android:id="@+id/receiveButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="@dimen/main_button_vertical_padding"
                android:text="@string/action_receive"
                android:textSize="@dimen/button_textsize"
                android:theme="@style/AppTheme.RaisedButton.Accent" />

        </LinearLayout>

    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>